--- a/index.html
+++ b/index.html
@@ -572,9 +572,9 @@
 							<div class="col">
 								<h1>Downloadables</h1>
 								<h2>Logos</h2>
-									<a href="_build/logos.eps"><p>Download</p></a>
+<!-- 									<a href="_build/logos.eps"><p>Download</p></a> -->
 								<h2>Clip Art</h2>
-								<p><a href="_build/clipart.eps">Download</a></p>
+<!-- 								<p><a href="_build/clipart.eps">Download</a></p> -->
 							</div>
 						</div>
 					</section>
